# sensor-dashboard

./: README.md  app.py  database.py  makefile  pyproject.toml  requirements.txt  utils.py
data/: links.csv  main.db
templates/: base.html  chart_data.html  index.html  links.html  price_list.html
