[project]
name = "sensor-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arel>=0.3.0",
    "duckdb>=1.3.2",
    "fastapi==0.115.13",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
    "sse-starlette==2.3.6",
    "uvicorn==0.34.3",
]
